# cf-connectrpc-middleware

./: .gitignore  CLAUDE.md  Cargo.toml  KUMO.md  MIDDLEWARES.md  README.md  SEED.md  deploy-stack.nuon  fnox.toml  mise.toml  pitchfork.toml
.github/workflows/: publish-kit.yml
.mise/tasks/cargo/: check  lint  machete  pre-commit  publish  test
.mise/tasks/cedar/: format  lsp  test  tools  validate  viz  vscode
.mise/tasks/cedar/mcp/: config  install
.mise/tasks/cedar/schema/: from-mcp
.mise/tasks/deploy/: stack
.mise/tasks/example/: check  gateway  server  test  worker
.mise/tasks/kit/: build  install  jsr-check  jsr-publish  test  typecheck
.mise/tasks/mise/: install
.mise/tasks/src/: check  clone  sync
.mise/tasks/stack/: local
.wrangler/cache/: cf.json
crates/connectrpc-cedar/: Cargo.toml
crates/connectrpc-cedar-interceptor/: Cargo.toml
crates/connectrpc-cedar-interceptor/src/: extract.rs  interceptor.rs  lib.rs
crates/connectrpc-cedar/src/: README.md  action.rs  authorizer.rs  extract.rs  layer.rs  lib.rs
crates/connectrpc-cedar/tests/: editorial.rs
crates/connectrpc-cf-metrics/: Cargo.toml
crates/connectrpc-cf-metrics/src/: interceptor.rs  layer.rs  lib.rs  sink.rs
crates/connectrpc-cf-rate-limit/: Cargo.toml
crates/connectrpc-cf-rate-limit/src/: key.rs  layer.rs  lib.rs  limiter.rs  mode.rs
crates/connectrpc-cf-tracing/: Cargo.toml
crates/connectrpc-cf-tracing/src/: extract.rs  layer.rs  lib.rs
crates/connectrpc-guard/: Cargo.toml
crates/connectrpc-guard/src/: lib.rs
crates/connectrpc-oidc/: Cargo.toml
crates/connectrpc-oidc/src/: claims.rs  fetch.rs  jwks.rs  layer.rs  lib.rs
crates/connectrpc-oidc/tests/: live_rauthy.rs  rauthy_jwks.json
crates/connectrpc-session/: Cargo.toml
crates/connectrpc-session/src/: lib.rs
crates/connectrpc-tower-kit/: Cargo.toml
crates/connectrpc-tower-kit/src/: ext.rs  future.rs  lib.rs  response.rs  rollout.rs  session.rs
docs/: AUTH-STACK.md  NEW-PROJECT.md
examples/multitenant-policies/: README.md  ROADMAP.md  multitenant.cedarschema
examples/multitenant-policies/policies/: billing.cedar  invitation.cedar  org.cedar
examples/rauthy-cedar/: README.md  e2e.nu  harness.nu  rauthy.cedarschema
examples/rauthy-cedar/app/: Cargo.toml  build.rs
examples/rauthy-cedar/app/policies/: demo.cedar  demo.cedarschema
examples/rauthy-cedar/app/proto/demo/v1/: api.proto
examples/rauthy-cedar/app/proto/grpc/health/v1/: health.proto
examples/rauthy-cedar/app/proto/grpc/reflection/v1/: reflection.proto
examples/rauthy-cedar/app/src/: lib.rs
examples/rauthy-cedar/demo/: Cargo.toml
examples/rauthy-cedar/demo/policies/: demo.cedar  demo.cedarschema
examples/rauthy-cedar/demo/src/: main.rs
examples/rauthy-cedar/gateway/: .gitignore  Cargo.toml  build.rs  serve.nu  wrangler.toml
examples/rauthy-cedar/gateway/proto/gateway/v1/: gateway.proto
examples/rauthy-cedar/gateway/src/: lib.rs
examples/rauthy-cedar/policies/: access.cedar
examples/rauthy-cedar/server/: Cargo.toml  serve.nu
examples/rauthy-cedar/server/src/: main.rs
examples/rauthy-cedar/tests/: entities.json  run.nu
examples/rauthy-cedar/worker/: .gitignore  Cargo.toml  serve.nu  wrangler.toml
examples/rauthy-cedar/worker/src/: lib.rs
examples/remy-sport-policies/: README.md  remy-sport.cedarschema
examples/remy-sport-policies/policies/: event.cedar  platform.cedar  player.cedar  team.cedar
examples/remy-sport-policies/tests/: entities.json  run.nu
scripts/: deploy-stack.nu  stack-local.nu
src/: README.md  layer.rs  lib.rs
tests/: editorial.rs
