# Workspace root.
#
# connectrpc-tower-kit is the shared foundation; the connectrpc-cedar-*
# crates depend on it, and the CF-ops middlewares (connectrpc-cf-tracing,
# connectrpc-cf-metrics, connectrpc-cf-rate-limit) are members alongside them.
#
# Resolver "2" so cdylib feature-unification matches the wasm32 build path
# in downstream Workers.
[workspace]
resolver = "2"
members = [
    "crates/connectrpc-tower-kit",
    "crates/connectrpc-oidc",
    "crates/connectrpc-session",
    "crates/connectrpc-cedar",
    "crates/connectrpc-guard",
    "crates/connectrpc-cedar-interceptor",
    "crates/connectrpc-cf-tracing",
    "crates/connectrpc-cf-rate-limit",
    "crates/connectrpc-cf-metrics",
    "examples/rauthy-cedar/app",
    "examples/rauthy-cedar/server",
]
# `.src/` is gitignored — mutable clones of upstream reference repos
# (the example workers, kumo, etc.). Cargo would otherwise auto-discover
# their Cargo.toml as workspace members. Explicit exclude keeps them
# building independently (the example worker has its own [profile] and
# wasm32-only deps that would conflict with workspace settings).
exclude = [".src", "target", ".git", "examples/rauthy-cedar/worker"]

# Shared metadata — every crate inherits via `workspace = true` in its own
# [package]. Keeps version + rust-version + edition + repo URL aligned.
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Joe Blew <gedw99@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joeblew999/cf-connectrpc-middleware"

# Shared dep pins — this workspace is the single source of truth for pins.
# `connectrpc` = anthropics/connect-rust, pinned to 0.7 (current release);
# message types come from buffa (transitive). `default-features = false`
# keeps the wasm32 build lean — the Router is a `tower::Service` without
# the hyper `server` feature, so it runs natively AND on Cloudflare Workers.
# NOTE: .src/example-multitenant-worker (connyay fork) still pins 0.6 and
# needs bumping to 0.7 before it builds against these crates.
[workspace.dependencies]
connectrpc       = { version = "0.7", default-features = false }
cedar-policy     = "4"
tower            = { version = "0.5", default-features = false }
http             = "1"
http-body        = "1"
http-body-util   = "0.1"
bytes            = "1.5"
tracing          = { version = "0.1", default-features = false, features = ["std", "attributes"] }
pin-project-lite = "0.2"

# Profile for the release path that gets compiled into a Worker. Mirrors
# the example worker's profile so size optimization is consistent end-to-end.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
