[package]
name        = "connectrpc-cf-metrics"
# [cf-binding: Analytics Engine] = consumer must provision an Analytics
# Engine binding in wrangler.toml. Crate has no `worker` dep — consumer
# wraps `env.AE` in a `MetricSink` impl.
description = "[cf-binding: Analytics Engine] Transparent tower::Layer that emits per-RPC counters + latency histograms to Cloudflare Analytics Engine."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Two surfaces now ship from this crate (both share the MetricSink trait):
#   - `layer`       — transparent tower::Layer (reads req.uri().path())
#   - `interceptor` — connectrpc::Interceptor (reads Spec::procedure,
#                     derives status from the typed Result<_, ConnectError>)
# The Interceptor trait landed in connectrpc 0.6 (it didn't exist in the
# 0.4.2 we used to pin — see MIDDLEWARES.md §3), so we now depend on
# connectrpc for the interceptor module. The Layer needs none of it.
connectrpc.workspace       = true
tower.workspace            = true
http.workspace             = true
tracing.workspace          = true
pin-project-lite.workspace = true

# async-trait for the MetricSink consumer trait. AE binding itself is sync,
# but the trait stays async so non-CF hosts can wire async sinks (Prometheus
# pushgateway, OTLP collector, ...).
async-trait = "0.1"

# Cross-platform `Instant`. `std::time::Instant` doesn't compile on
# wasm32-unknown-unknown (no monotonic clock in JS). `web-time` aliases
# to `performance.now()` on web, falls through to std on native. Tiny dep.
web-time = "1.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tower = { workspace = true, features = ["util"] }
