[package]
name        = "connectrpc-tower-kit"
description = "[generic] Shared primitives for Connect-RPC tower middleware — Rollout trait, denial-response builder, Future enum helper. Works on any connectrpc host."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

[lib]
# rlib only — this is a foundation library, not a Worker target.
# Downstream crates that produce a cdylib (connectrpc-cedar etc.) pull
# this in as a normal Rust dependency. Keeping it rlib-only avoids the
# extra wasm artifact and the cdylib feature unification surprises.
crate-type = ["rlib"]

[dependencies]
# Connect-RPC body type (ConnectRpcBody) + ConnectError for denial responses.
# default-features = false keeps the wasm32 build path clean — no server/TLS.
connectrpc.workspace = true

# http types — Request, Response, HeaderName. Shared with every Connect-RPC
# middleware via tower::Service<http::Request<B>>. (We don't depend on `tower`
# itself here: the kit only provides primitives — the denial-response builder,
# the ShortCircuitFuture enum, the Rollout trait — and never names a
# `tower::Layer`/`tower::Service` bound. Downstream crates depend on `tower`.)
http.workspace          = true
http-body-util.workspace = true
bytes.workspace         = true

# pin_project_lite for the canonical short-circuit Future enum. Header-only.
pin-project-lite.workspace = true

# tracing for the Rollout trait's log_shadow helper. The kit only emits
# events; downstream picks the subscriber.
tracing.workspace = true

[features]
default = []
