[package]
name = "rauthy-cedar-app"
description = "Shared oidc→cedar app: the ConnectRPC service + middleware stack + policies, host-agnostic (runs native AND on CF — the hosts only add JWKS-fetch + serve-loop)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
publish = false

[lib]
# rlib so the native server links it; it builds on wasm32 too (the CF worker
# path-deps it). NO host deps here (no hyper, no worker) — that's the point.
crate-type = ["rlib"]

[dependencies]
# The guard composition + Session→Cedar extractor + Cedar loading are now
# shared (no per-app copy). The app keeps only its policies + the stub RPC.
connectrpc-guard = { path = "../../../crates/connectrpc-guard" }
connectrpc-oidc  = { path = "../../../crates/connectrpc-oidc" }

connectrpc     = { workspace = true }
http           = { workspace = true }
http-body-util = { workspace = true }
bytes          = { workspace = true }
tower          = { workspace = true, features = ["util"] }
